src/Adstacy/AppBundle/Resources/public/less/base/layout.less
body {
  background-color: #e3e3e3;
  padding-top: 70px;
}

.navbar {
  box-shadow: 0 1px 2px #999;
}

.masonry {
  margin: 0 auto 14px auto;
}

.adstacy-container {
  margin: auto;
}

.ad {
  width: 236px;
  margin: 14px 7px 0 7px;
  background-color: #fff;
  border-radius: 5px 5px 0 0;
  box-shadow: 0 0 1px #333;

  .promote, .unpromote {
    width: 86px;
  }

  .box-medium {
    width: 150px;
  }
  
  .box-large {
    width: 236px;
  }

  .inline-block a {
    padding: 5px;
  }
}

.pic {
  background-image: url('../img/diagonal-line.png');
  border-radius: 5px 5px 0 0;

  img {
    background: url('../img/loading.gif') no-repeat center center;
    border-radius: 5px 5px 0 0;
  }
}

.desc {
  padding: 7px 14px;
}

#search {
  padding-right: 40px;
  &:focus + button span {
    color: darken(@input-color-placeholder, 20%);
  }
}

.search-btn {
  background-color: transparent;
  border: none;
  padding: 0;
  position: absolute;
  top: 10px;
  right: 20px;
  height: 34px;

  @media (min-width: @grid-float-breakpoint) {
    top: 0;
  }

  span {
    color: @input-color-placeholder;
    font-size: 25px;
  }

  &:hover span, &:active span {
    color: darken(@input-color-placeholder, 50%);
  }
}

// -------------------------------------------

.form-container, .dropdown-container {
  .form-control {
    margin: 10px auto;
  }
}

.form-container {
  margin: 0 auto;
  width: 400px;

  h1 {
    text-align: center;
  }
}


.ads-form-section  {
  padding: 20px;
  border-bottom: 1px solid @border-color;

  &:last-child {
    border-bottom: 0;
  }
}

.dropdown-container {
  width: 250px;

  .social-login > a {
    color: white;
  }

  a {
    color: @brand-primary;

    &:hover {
      text-decoration: underline !important;
      background-color: white !important;
      color: @gray-dark !important;
    }
  }

  > li {
    padding: 10px;
  }
}

.btn-block + .btn-block {
  margin-top: 10px;
}

ul.nav-expand {
  list-style-type: none;
  margin: auto;
  padding: 0;
  line-height: 2;
  overflow: hidden;
  max-height: 10em;

  li {
    margin: 0 7px;
    width: 234px;
    float: left;
  }
}

#navbar-expand-container {
  padding: 10px 0;
  border-top: 1px solid @border-color;

  a {
    display: block;
  }
}

.image-preview {
  &.medium img {
    max-width: 236px;
  }
  &.small img {
    max-height: 200px;
  }
}

.border-top {
  border-top: 1px solid @border-color;
}

